Make it possible to save a resource over a deleted resource

This creates a new version of a previously deactived resource when adding
a resource with the same md5, filename or name.

BUG:439128